# aae

./: .asf.yaml  .editorconfig  BUILD.md  DIST_README.txt  LICENSE.txt  NOTICE.txt  README.md  build.sh  composer.json  docker-compose.yml  pom.xml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/workflows/: codeql-csharp-analysis.yml  codeql-java-analysis.yml  codeql-js-analysis.yml  codeql-py-analysis.yml  labeler.yml  rat.yml  spotless.yml  test-lang-c++.yml  test-lang-c.yml  test-lang-csharp.yml  test-lang-java.yml  test-lang-js.yml  test-lang-perl.yml  test-lang-php.yml  test-lang-py.yml  test-lang-ruby.yml  test-lang-rust-audit.yml  test-lang-rust-ci.yml  test-lang-rust-clippy.yml
.travis/: before_install.sh
doc/: LICENSE  NOTICE  build.xml  forrest.properties
doc/examples/: example.py  user.ain
doc/src/: cli.xconf  skinconf.xml
lang/c/: CMakeLists.txt  CPackConfig.txt  FindSnappy.cmake  INSTALL  LICENSE  NOTICE  README  README.maintaining_win32.txt  build.sh  cmake_ainglelib.bat  cmake_ainglelib.sh  cmake_pretty.cmake  version.sh
lang/c++/: .clang-format  .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile  LICENSE  MSBUILD.md  MainPage.dox  NEWS  README  build.sh
lang/c++/api/: AIngleParse.hh  AIngleSerialize.hh  AIngleTraits.hh  Compiler.hh  Config.hh  DataFile.hh  Decoder.hh  Encoder.hh  Exception.hh  Generic.hh  GenericDatum.hh  Layout.hh  LogicalType.hh  Node.hh  NodeConcepts.hh  NodeImpl.hh  Parser.hh  Reader.hh  Resolver.hh  ResolverSchema.hh  ResolvingReader.hh  Schema.hh  SchemaResolution.hh  Serializer.hh  Specific.hh  Stream.hh  Types.hh  ValidSchema.hh  Validator.hh  Writer.hh  Zigzag.hh
lang/c++/api/buffer/: Buffer.hh  BufferPrint.hh  BufferReader.hh  BufferStream.hh  BufferStreambuf.hh
lang/c++/api/buffer/detail/: BufferDetail.hh  BufferDetailIterator.hh
lang/c++/examples/: cpx.hh  custom.cc  datafile.cc  generated.cc  generic.cc  imaginary.hh  resolving.cc  schemaload.cc  validating.cc
lang/c++/impl/: BinaryDecoder.cc  BinaryEncoder.cc  Compiler.cc  DataFile.cc  FileStream.cc  Generic.cc  GenericDatum.cc  LogicalType.cc  Node.cc  NodeImpl.cc  Resolver.cc  ResolverSchema.cc  Schema.cc  Stream.cc  Types.cc  ValidSchema.cc  Validator.cc  Zigzag.cc  ainglegencpp.cc
lang/c++/impl/json/: JsonDom.cc  JsonDom.hh  JsonIO.cc  JsonIO.hh
lang/c++/impl/parsing/: JsonCodec.cc  ResolvingDecoder.cc  Symbol.cc  Symbol.hh  ValidatingCodec.cc  ValidatingCodec.hh
lang/c++/jsonschemas/: cpp_reserved_words  tweet
lang/c++/parser/: AIngleLex.ll  AIngleYacc.yy
lang/c++/test/: AInglegencppTestReservedWords.cc  AInglegencppTests.cc  CodecTests.cc  CompilerTests.cc  DataFileTests.cc  JsonTests.cc  LargeSchemaTests.cc  SchemaTests.cc  SpecificTests.cc  StreamTests.cc  buffertest.cc  precompile.cc  testgentest.cc  testparser.cc  unittest.cc
lang/c/docs/: CMakeLists.txt  index.txt
lang/c/examples/: CMakeLists.txt  quickstop.c
lang/c/src/: .gitignore  CMakeLists.txt  aingle-c.pc.in  aingle.h  aingle_generic_internal.h  aingle_private.h  aingleappend.c  ainglecat.c  ainglemod.c  ainglepipe.c  allocation.c  array.c  codec.c  codec.h  consume-binary.c  consumer.c  datafile.c  datum.c  datum.h  datum_equal.c  datum_read.c  datum_size.c  datum_skip.c  datum_validate.c  datum_value.c  datum_write.c  dump.c  dump.h  encoding.h  encoding_binary.c  errors.c  generic.c  io.c  map.c  memoize.c  resolved-reader.c  resolved-writer.c  resolver.c  schema.c  schema.h  (+12 more)
lang/c/src/aingle/: allocation.h  basics.h  consumer.h  data.h  errors.h  generic.h  io.h  legacy.h  msinttypes.h  platform.h  refcount.h  resolver.h  schema.h  value.h
lang/c/tests/: .gitignore  CMakeLists.txt  generate_interop_data.c  performance.c  test_aingle_1034.c  test_aingle_1084.c  test_aingle_1087.c  test_aingle_1165.c  test_aingle_1167.c  test_aingle_1237.c  test_aingle_1238.c  test_aingle_1279.c  test_aingle_1379.c  test_aingle_1405.c  test_aingle_1572.c  test_aingle_1691.c  test_aingle_1904.c  test_aingle_1906.c  test_aingle_766.c  test_aingle_968.c  test_aingle_984.c  test_aingle_data.c  test_aingle_errors_are_thread_safe.c  test_aingle_schema.c  test_aingle_schema_names.c  test_aingle_values.c  test_data_structures.c  test_interop_data.c  test_refcount.c  test_valgrind
lang/c/tests/schema_tests/pass/: interop.avsc  namespace_enum  namespace_fixed
lang/csharp/: .gitignore  AIngle.dox  AIngle.ruleset  AIngle.sln  LICENSE  NOTICE  README.md  UpgradeLog.htm  build.sh  common.props  stylecop.json  versions.props
lang/java/: .gitignore  build.sh  checkstyle.xml  eclipse-java-formatter.xml  pom.xml  suppressions.xml
lang/js/: NOTICE  README.md  build.sh  package-lock.json  package.json
lang/perl/: .gitignore  Changes  MANIFEST  MANIFEST.SKIP  Makefile.PL  NOTICE  README  build.sh
lang/php/: LICENSE  README.md  build.sh  monorepo.json  phpunit.xml
lang/py/: .gitignore  MANIFEST.in  README.md  build.sh  mypy.ini  pyproject.toml  setup.cfg  setup.py  tox.ini
lang/py/aingle/: __init__.py  codecs.py  compatibility.py  constants.py  datafile.py  errors.py  io.py  ipc.py  name.py  protocol.py  schema.py  timezones.py  tool.py  utils.py
lang/py/aingle/test/: __init__.py  gen_interop_data.py  mock_tether_parent.py  sample_http_client.py  sample_http_server.py  test_bench.py  test_compatibility.py  test_datafile.py  test_datafile_interop.py  test_init.py  test_io.py  test_ipc.py  test_protocol.py  test_schema.py  test_script.py  test_tether_task.py  test_tether_task_runner.py  test_tether_word_count.py  word_count_task.py
lang/py/aingle/tether/: __init__.py  tether_task.py  tether_task_runner.py  util.py
lang/py/scripts/: aingle
lang/ruby/: .gitignore  .rubocop.yml  Gemfile  Manifest  NOTICE  Rakefile  build.sh
lang/rust/: .activate.sh  .deactivate.sh  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  README.tpl  migration_guide.md  rustfmt.toml
share/docker/: Dockerfile  DockerfileLocal  run-tests.sh
share/editors/: README.txt  aingle-idl.vim
share/githooks/: commit-msg
share/precommit/: README.md  buildtest.sh
(+1162 files in other folders)
