##


##
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = aingle
version = file: aingle/VERSION.txt
description = AIngle is a serialization and RPC framework.
long_description = file: README.md
long_description_content_type='text/markdown'
keywords =
    aingle
    serialization
    rpc
author = AIngle Dev Team
author_email = carlos.tovar@blockinnovation.center
url = https://apache.aingle.ai/
license_file = aingle/LICENSE
license = Apache License 2.0
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 5 - Production/Stable

[bdist_wheel]
universal = 1

[options]
packages =
    aingle
    aingle.test
    aingle.tether
package_dir =
    aingle = aingle
    aingle.test = aingle/test
    aingle.tether = aingle/tether
include_package_data = true
install_requires =
    typing-extensions;python_version<"3.8"
zip_safe = true
scripts =
    scripts/aingle
python_requires = >=3.6

[options.package_data]
aingle =
    HandshakeRequest.ain
    HandshakeResponse.ain
    LICENSE
    NOTICE
    README.md
    VERSION.txt
aingle.tether =
    InputProtocol.avpr
    OutputProtocol.avpr

[options.extras_require]
snappy = python-snappy
zstandard = zstandard

[aliases]
dist = sdist --dist-dir ../../dist/py
